[package]
name = "validator_derive_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.36"
darling = "0.20.9"
proc-macro-error = "1.0.4"

[dev-dependencies]
insta = "1.39.0"
prettyplease = "0.2.20"